{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 32,
  "lineage": "318111a4-cc1f-dbf1-20df-2043237e0886",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:737935987320:loadbalancer/terraform-asg-example",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-asg-example-209640250.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-asg-example",
            "idle_timeout": 60,
            "instances": [
              "i-0cd79965b628fce25",
              "i-0ef949feecb0a4658"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-0cb316d1f515ad5d2"
            ],
            "source_security_group": "737935987320/terraform-example-elb",
            "source_security_group_id": "sg-0cb316d1f515ad5d2",
            "subnets": [
              "subnet-7a0f8337",
              "subnet-8fcc8df4",
              "subnet-ea919083"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737935987320:security-group/sg-0cb316d1f515ad5d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb316d1f515ad5d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-elb",
            "name_prefix": null,
            "owner_id": "737935987320",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d08dbcb9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:737935987320:security-group/sg-0d9f0521bb9c15cc9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d9f0521bb9c15cc9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": null,
            "owner_id": "737935987320",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d08dbcb9"
          }
        }
      ]
    }
  ]
}